--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -1105,6 +1105,8 @@ a\rangle} = a$ and the term of $\langle e, t, n, a \rangle$ is the pair
 $\langle e, t \rangle$.
 
 
+\pagebreak
+
 \appendices
 \section{Consistency of the Synod algorithm}
 \label{synod-safety}
