--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -751,7 +751,8 @@ instances $i \ge i_0$. In this state, $\owner{p}$ may emit $\prop{i}{p}$ for
 any $i \ge i_0$, since $e(p) = e(i_0) \le e(i)$ as $e$ is nondecreasing.
 Furthermore, if $e(i) \le e(p) + 1$, all instances below $i$ are chosen and
 acceptances $\acc{i}{a}{p}$ have been received from a quorum $q^\textrm{II} \in
-Q_{e(i)}$ then $\chosen{i}{p}$.
+Q_{e(i)}$ then $\chosen{i}{p}$. The node $\owner{p}$ is known as the
+\textit{leader}.
 
 When in this state, if an operator wishes to change the cluster membership to
 $Q'$ where $Q' \frown Q_{e(p)}$ they must first arrange to append $Q'$ to the
@@ -767,18 +768,18 @@ I to run, which means the pipeline cannot stall.
 
 At this point, the system is no longer in normal running as defined above
 because $e(p) = e_\mathrm{max} - 1$. In order to get back into a normal state,
-a proposal $p'$ should be chosen with $e(p') = e(p) + 1$ and $\owner{p} =
-\owner{p'}$, and $\owner{p}$ should try and receive a quorum of promises for
-$p'$. It can do this by dividing the cluster into two quorums in such a way
-that it has a \textit{casting vote} between the two quorums: it finds $q \in
-Q_{e(p)}$ and $q' \in Q_{e(p)+1}$ having $q \cap q' = \{\owner{p}\}$ and
-broadcasts $\prep{p'}$ to all nodes in $q'$ except itself. While it is waiting
-for the promises to arrive in response to this broadcast it continues to make
-progress choosing instances using the quorum $q \in Q_{e(p)}$.  Eventually when
-promises have arrived from every node in $q'$ except itself, it may make a
-promise to itself, immediately complete phase I for proposal $p'$, and start
-broadcasting proposals $\prop{i}{p'}$. This restores the system to normal
-running.
+a proposal $p'$ should be chosen with $e(p') = e(p) + 1$ and $\owner{p'}$
+should try and receive a quorum of promises for $p'$. It can do this by
+dividing the cluster into two quorums in such a way that it has a
+\textit{casting vote} between the two quorums: it finds $q \in Q_{e(p)}$ and
+$q' \in Q_{e(p)+1}$ having $q \cap q' = \{\owner{p'}\}$ and broadcasts
+$\prep{p'}$ to all nodes in $q'$ except itself. While it is waiting for the
+promises to arrive in response to this broadcast, $\owner{p}$ continues to make
+progress choosing instances of proposal $p$ using the quorum $q \in Q_{e(p)}$.
+Eventually when promises have arrived from every node in $q'$ except
+$\owner{p'}$ itself, it can send itself a final promise, immediately complete
+phase I for proposal $p'$, and start broadcasting proposals $\prop{i}{p'}$.
+This restores the system to normal running.
 
 Notice that this process requires that $e(i_\mathrm{max})$ increases by at most
 $1$ before the new phase I has finished running. If $e(i_\mathrm{max})$ were
@@ -786,9 +787,12 @@ increased by a larger amount then this would put aa limit on how many instances
 can run in the old epoch, and if the limit were reached then progress would
 have to stop until the corresponding phase I was completed.
 
-Notice also that this process requires $\owner{p}$ to be able to divide the
-cluster so that it has a casting vote. If this is not possible, it may be able
-to \textit{abdicate} to another node that does have a casting vote.
+Notice also that this process requires the existence of a node $\owner{p'}$
+that has a casting vote. If $\owner{p} \ne \owner{p'}$ then this process is
+known as an \textit{abdication}: the original leader $\owner{p}$ hands over the
+leadership of the cluster to $\owner{p'}$ at instance $i_c$.  As the current
+leader is responsible for proposing values, the system may need to take action
+to reconfigure its clients.
 
 \subsection{Examples}\label{types-of-membership-change}
 
@@ -975,6 +979,8 @@ first and last steps rely on the ability to simultaneously change the weights
 of every node by a constant factor, and every other step changes the weight of
 a single node by one, so this satisfies $M(w_{e+k}) \frown M(w_{e+k+1})$ for $0
 \le k \le 6$ and hence can be performed without jitter.
+
+Throughout this process, $a_1$ and $a_2$ both have casting votes TODO.
 
 \section{Preserving the Paxos invariants}
 
