--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -866,6 +866,10 @@ holds.
 
 \end{enumerate}
 
+Theorem \ref{weights-nearly-equal} is reminiscent of the \textit{amoeba}
+analogy described in \cite{cheap-paxos}.
+
+
 \section{Discussion}\label{discussion}
 
 Paxos supports both the crash-stop and crash-recover failure modes.
