--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -899,33 +899,27 @@ it is the case that $p' \preceq p$. \end{itemize}
 \subsubsection{Proposing values} From the discussion in \ref{value-function}
 above the value $v_i(p)$ of proposal $p$ in instance $i$ may be changed without
 affecting any invariants as long as $\neg\prop{p}{i}$. So as to ensure this,
-each proposal $p$ has a unique node $\owner{p}$ that may send out $\prop{p}{i}$
-and which is therefore responsible for the value $v_i(p)$ for each $i$.
+each proposal $p$ has a unique node $\owner{p}$ which is the only one that may
+send out $\prop{p}{i}$ and which is therefore responsible for the value
+$v_i(p)$ for each $i$.  If $\owner{p}$ has already sent $\prop{p}{i}$ then it
+may not change the value $v_i(p)$ but if desired it may send out $\prop{p}{i}$
+again, since messages may be duplicated. On the other hand if it has not sent
+out $\prop{p}{i}$ then it may change $v_i(p)$ freely.
 
+If $\owner{p}$ has received promises for $p$ in instance $i$ from every node in
+a quorum $q \in Q_{e(p)}$ where $e(p) \le e(i)$ then it may send out
+$\prop{p}{i}$. If any of the promises from nodes in $q$ is of the form
+$\bprom{i}{a}{p}{p'}$ then it must first set \[v_i(p) = v_i\bigl(\mathrm{max}
+\{p' \mid \bprom{i}{a}{p}{p'} \textrm{ received}, a \in q \}\bigr).\] If $i >
+i_\mathrm{max}$ so the value of $e(i)$ is not known then it is sufficient to
+find an earlier instance $i' < i$ and proposal $p'$ such that $\chosen{i'}{p'}$
+and $e(p) \le e(i')$ because $e$ is nondecreasing.
 
 \subsubsection{Choosing values} Any node may consider phase II to be complete
 for proposal $p$ at instance $i$, and therefore $\chosen{p}{i}$, if
 \begin{itemize} \item $e(i) \le e(p) + 1$, \item if $i > 0$ then
-$\chosen{i-1}{p'}$ for some $p'$, so that $i < i_\mathrm{max}$, and \item there
-is a quorum $q \in Q_{e(i)}$ such that $\acc{i}{a}{p}$ has been received for
-every $a \in q$.  \end{itemize}
-
-
-
-
-TODO expand this next bit, it's very complicated!
-
-The node $\owner{p}$ may change the value $v_i(p)$ as long as it has not
-already emitted $\prop{p}{i}$, and may consider phase I to be complete for
-proposal $p$ at instance $i$, and may therefore emit $\prop{p}{i}$, if there is an
-earlier instance ${i' < i}$ and proposal $p'$ such that $\chosen{i'}{p'}$ and
-$e(p) \le e(i')$ (or else $i = 0$), and there is a quorum $q \in Q_{e(p)}$ such
-that for every $a \in q$ it has previously received a promise from node $a$ for
-proposal $p$ in instance $i$. If it has not already emitted $\prop{p}{i}$ and
-any of the promises from nodes in $q$ are of the form $\bprom{i}{a}{p}{p'}$
-then it must first set \[v_i(p) = v_i\bigl(\mathrm{max} \{p' \mid
-\bprom{i}{a}{p}{p'} \textrm{ received}, a \in q \}\bigr).\]
-
+$\chosen{i-1}{p'}$ for some $p'$, and \item there is a quorum $q \in Q_{e(i)}$
+such that $\acc{i}{a}{p}$ has been received for every $a \in q$.  \end{itemize}
 
 \section{Discussion}\label{discussion}
 
