--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -783,7 +783,7 @@ This restores the system to normal running.
 
 Notice that this process requires that $e(i_\mathrm{max})$ increases by at most
 $1$ before the new phase I has finished running. If $e(i_\mathrm{max})$ were
-increased by a larger amount then this would put aa limit on how many instances
+increased by a larger amount then this would put a limit on how many instances
 can run in the old epoch, and if the limit were reached then progress would
 have to stop until the corresponding phase I was completed.
 
